# jointcal

./: .gitignore  =  DE_IMPLEMENTATION_SUMMARY.md  GARCH_CALIBRATION.md  MIGRATION_TO_GPU_DE.md  MIGRATION_TO_METADE.md  README_DE_Calibration.md  WARP.md  benchmark_de.py  best_params.json  cal_loss.py  calibrate.py  calibrate2.py  calibrate2_de.py  calibrate2_de_improved.py  calibrate_gpu_de.py  calibrate_metade.py  calibrate_scipy_de.py  calibrate_scipy_de_v2.py  calibrated_params.json  calibrated_params_de.json  calibrated_params_scipy_de_best1bin.json  calibrated_params_scipy_de_best2bin.json  calibrated_params_scipy_de_rand1bin.json  calibration.py  calibration_params.json  check_true_params.py  compare_calibration.py  compare_custom_vs_scipy.py  compare_de_methods.py  compare_implied_vols_no_cli.py  dataset.py  dataset2.py  de.py  de_calibration_fixed_bounds.json  de_calibration_results.json  de_methods_comparison.json  de_v2.py  debug_calibrate.py  debug_calibrated_params.json  (+56 more)
calibration_results/: all_calibration_results.json  all_results.json  iv_moments_analysis.json  mc_moments_all_datasets.json  params_2_scalable_hn_dataset_250x40_l2_0.95968180.json  params_2_scalable_hn_dataset_250x40_l2_1.06369332.json  params_2_scalable_hn_dataset_250x40_l2_1.90777260.json  params_2_scalable_hn_dataset_250x40_l2_2.30100594.json  params_2_scalable_hn_dataset_250x40_l2_3.03805508.json  params_2_scalable_hn_dataset_250x40_l2_4.57222361.json  params_2_scalable_hn_dataset_250x40_l2_4.90193732.json  params_2_scalable_hn_dataset_250x40_l2_5.26739146.json  (+40 more)
loaders/: loader.json
(+71 files in other folders)
