[project]
name = "jointcal"
version = "0.1.0"
description = "Joint Calibration ANN for American Options under GARCH"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "sphinx>=8.2.3",
    "torch>=2.6.0",
]
[tool.hatchling.metadata]
core-metadata-version = "2.2"
[tool.setuptools]
packages = ["jointcal"]
